--- a/CSS/mdangnhap.css
+++ b/CSS/mdangnhap.css
@@ -17,6 +17,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-image: url(../APicture/brr.jpg);
 }
 #formfull form{
     width: 400px;
@@ -104,7 +105,9 @@ body{
     background-color: white;
     cursor: pointer;
 }
-
+#form-input__new>a{
+    text-decoration: none;
+}
 .form-input__help{
     position:absolute;
     color: #737373;
