--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,10 +1,14 @@
 *{
     box-sizing: border-box;
 }
-body{
-    background-color: white;
-    padding: 0%;
-    margin: 0%;
+@media only screen and (max-width: 600px) {
+    body {
+      background-color: lightblue;
+      background-color: white;
+      padding: 0%;
+      margin: 0%;
+    }
+  
 }
 .header{
     border: 2px solid #f3f3f3;
@@ -160,4 +164,24 @@ form input[type="text"]:focus{
     content: "";
     display: block;
     clear: both;
+}
+/* For desktop: */
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  [class*="col-"] {
+    width: 100%;
+  }
 }
